# DiscordSDK_Test

./: .gitignore  ANALISE_PUBLICACAO.md  CMakeLists.txt  COMECE_AQUI.txt  COMO_USAR.md  CONTRIBUTING.md  DiscordSDK_Test.sln  DiscordSDK_Test.vcxproj  ESTRUTURA_REFATORADA.md  GUIA_VISUAL.txt  LICENSE  PROJETO_PRONTO.txt  README.md  README_PROJETO.txt  SETUP_CONCLUIDO.md  START.txt  STATUS_FINAL.md  TESTAR_AGORA.md  build_info.json  compilar_e_executar.bat  discord_manifest.json  executar.bat  main.cpp  setup.bat  setup.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: DIAGRAMAS.md  DIAGRAMAS_ADICIONAIS.md  DIAGRAMAS_SIMPLIFICADOS.md  README_DIAGRAMAS.md
src/: discord_client.cpp  discord_client.h  types.h  ui_renderer.cpp  ui_renderer.h  window_handler.cpp  window_handler.h
